cmake_minimum_required(VERSION 3.24)
project(Moteur_Jeu_CPP_TAY_NUNES_MARIE_MAGDELAINE)

set(CMAKE_CXX_STANDARD 17)

add_executable(Moteur_Jeu_CPP_TAY_NUNES_MARIE_MAGDELAINE main.cpp Sources/Scene.cpp Headers/Scene.h Sources/Object.cpp Headers/Object.h Sources/Component.cpp Headers/Component.h Sources/Pool.cpp Headers/Pool.h)
